yamlfiles/completepackage/listbooks-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-listbook
  labels:
    app: list-book
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: list-book
  template:
    metadata:
      labels:
        app: list-book
    spec:
      containers:
      - name: listbook
        image: gcr.io/idea-monolithic-to-modern/listbook:latest
        ports:
        - containerPort: 8080

        readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 3
