yamlfiles/completepackage/addbook-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: addbook-service
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  type: NodePort
  selector:
    app: add-book
  ports:
    - port: 80
      targetPort: 8080
