yamlfiles/completepackage/listbooks-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: listbook-service
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  type: NodePort
  selector:
    app: list-book
  ports:
    - port: 80
      targetPort: 8080
