yamlfiles/completepackage/updatebook-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: updatebook-service
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  type: NodePort
  selector:
    app: update-book
  ports:
    - port: 80
      targetPort: 8080
