yamlfiles/completepackage/ingress-with-shared-cert.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: bookstore
  annotations:
          ingress.gcp.kubernetes.io/pre-shared-cert: "mcrt-4c78dc8b-c4e3-474c-973f-09d0ff22380d"
          kubernetes.io/ingress.class: gce
          kubernetes.io/ingress.global-static-ip-name: "bookstore-ip"        
          bernetes.io/ingress.allow-http: "false"
spec:
  backend:
    serviceName: frontend-service
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /listallbooks
        backend:
          serviceName: listbook-service
          servicePort: 80

      - path: /addnewbook
        backend:
          serviceName: addbook-service
          servicePort: 80
        
      - path: /showupdateform
        backend:
          serviceName: updatebook-service
          servicePort: 80
      
      - path: /updatebook/*
        backend:
         serviceName: updatebook-service
         servicePort: 80

      - path: /deletebook/*
        backend:
          serviceName: deletebook-service
          servicePort: 80
